fix(home): games on the homepage having huge gaps in between

--- a/theme.css
+++ b/theme.css
@@ -251,12 +251,12 @@
     border-radius: 0 0 18px 18px;
 }
 
-.hlist.game-cards {
+.tab-content.rbx-tab-content .hlist.game-cards {
     display: flex;
     flex-wrap: wrap;
 }
 
-.hlist.game-cards .list-item.game-card {
+.tab-content.rbx-tab-content .hlist.game-cards .list-item.game-card {
     flex-grow: 1;
     flex-basis: calc(100% / 6);
     min-width: 150px;
